# OpenGL

./: CMakeLists.txt  LICENSE  README.md  glad.c  main.cpp
application/: Application.cpp  Application.h  CMakeLists.txt
application/camera/: camera.cpp  camera.h  cameraControl.cpp  cameraControl.h  orthographicCamera.cpp  orthographicCamera.h  perspectiveCamera.cpp  perspectiveCamera.h
assets/shaders/: fragment.glsl  vertex.glsl
glframework/: CMakeLists.txt  core.h  shader.cpp  shader.h  texture.cpp  texture.h
thirdPart/include/glad/: glad.h
wrapper/: CMakeLists.txt  checkError.cpp  checkError.h
